# gluon

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/gluon/: Cargo.toml
crates/gluon-build/: Cargo.toml
crates/gluon-build/src/: lib.rs
crates/gluon-cli/: Cargo.toml
crates/gluon-cli/src/: embed.rs  main.rs  templating.rs  wiring.rs
crates/gluon-cli/src/commands/: build_run.rs  db.rs  destroy.rs  dev.rs  generate.rs  mod.rs  new.rs  routes.rs
crates/gluon-cli/templates/controller/: page.rs.j2  page.tsx.j2  route.rs.j2
crates/gluon-cli/templates/domain/: entity.rs.j2  error.rs.j2  mock.rs.j2  mod.rs.j2  repository.rs.j2  repository_impl.rs.j2  value_objects.rs.j2
crates/gluon-cli/templates/dto/: dto.rs.j2
crates/gluon-cli/templates/migration/: down.sql.j2  up.sql.j2
crates/gluon-cli/templates/new/: .env.example.j2  Cargo.toml.j2  build.rs.j2  gluon.toml.j2
crates/gluon-cli/templates/new/app/: layout.tsx  page.rs.j2  page.tsx
crates/gluon-cli/templates/new/app/_error/: 404.tsx  500.tsx
crates/gluon-cli/templates/new/app/components/: csrf_token.tsx
crates/gluon-cli/templates/new/src/: main.rs.j2  wiring.rs.j2
crates/gluon-cli/templates/new/src/domain/: mod.rs
crates/gluon-cli/templates/new/src/dto/: mod.rs
crates/gluon-cli/templates/new/src/infrastructure/mocks/: mod.rs
crates/gluon-cli/templates/new/src/infrastructure/persistence/: mod.rs
crates/gluon-cli/templates/new/src/usecases/: mod.rs
crates/gluon-cli/templates/usecase/: usecase.rs.j2
crates/gluon-cli/tests/: e2e.rs  e2e_destroy_loop.rs  e2e_idempotency.rs  http_csrf.rs  http_smoke.rs
crates/gluon-macros/: Cargo.toml
crates/gluon-macros/src/: lib.rs
crates/gluon-macros/tests/: ui.rs
crates/gluon-macros/tests/ui/pass/: entity_basic.rs  gluon_test_basic.rs
crates/gluon/src/: boot.rs  container.rs  error.rs  flash.rs  inject.rs  lib.rs  prelude.rs  redirect.rs  session.rs  testing.rs  view.rs
crates/gluon/src/middleware/: csrf.rs  htmx.rs  mod.rs  static_files.rs
crates/gluon/tests/: app_macro.rs  csrf_middleware.rs  htmx_middleware.rs  static_files.rs  testing_dogfood.rs
skills/gluon-cli/: SKILL.md
skills/gluon-cli/references/: commands.md  conventions.md  environment.md  limitations.md  testing.md  validation.md  workflows.md
