[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/smartcrabai/gluon"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
axum-test = "17"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
form_urlencoded = "1"
heck = "0.5"
http = "1"
insta = { version = "1", default-features = false }
jsxrs = "0.1.4"
minijinja = "2"
notify = "8"
opentelemetry = { version = "0.32", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "0.32", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "rt-tokio"] }
proc-macro2 = "1"
quote = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "=0.13.1", default-features = false, features = [
  "rustls",
  "json",
  "cookies",
] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
subtle = "2"
syn = { version = "2", features = ["full"] }
tempfile = "3"
thiserror = "2"
time = { version = "0.3", default-features = false }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = "0.14"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = "1"
ts-rs = "11"
walkdir = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[workspace.lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"
