[package]
description = "Procedural macros for the gluon framework"
edition.workspace = true
license.workspace = true
name = "gluon-macros"
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
tokio.workspace = true
trybuild.workspace = true

[lints]
workspace = true
